[package]
name = "miner_thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dynamic_linking must be disabled before releasing
bevy = {version = "0.12", features = ["file_watcher",]}
bevy_asset_loader = {version="0.19", features = ["standard_dynamic_assets", "2d"]}
bevy_mod_picking = "0.17.0"

rand = "0.8.5"

serde = {version="1.0", features = ["derive"]}
json5 = "0.4.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# slight boost to perf on release builds
# [profile.release]
# lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
