[package]
name = "miner_thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dynamic_linking must be disabled before releasing
bevy = {version = "0.12", default-features = false, features = ["file_watcher", "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",]}
bevy_kira_audio = {version = "0.18"}
bevy_asset_loader = {version="0.19", features = ["standard_dynamic_assets", "2d"]}
bevy_mod_picking = "0.17.0"

rand = "0.8.5"

serde = {version="1.0", features = ["derive"]}
json5 = "0.4.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# slight boost to perf on release builds
# [profile.release]
# lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
